# saer-openapi-sdk

./: CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  setup.py  test.csv
saer/: __init__.py
tests/: test_patent_detail.py
