[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saer-openapi"
version = "1.0.0"
dependencies = [
    "requests>=2.31.0"
]
requires-python = ">=3.8"
authors = [
    { name = "Sadam·Sadik", email = "Haoke98@outlook.com" }
]
maintainers = [
    { name = "Sadam·Sadik", email = "Haoke98@outlook.com" }
]
description = "A python sdk for [SAER-OPENAPI](http://api.isaerdata.com/)"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ['saer', 'openapi', 'api', 'sdk', 'python-sdk', "api.isaerdata.com"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.6',
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator"
]

[project.urls]
Homepage = "https://github.com/Haoke98/saer-openapi-sdk"
Documentation = "https://github.com/Haoke98/saer-openapi-sdk/README.md"
Repository = "https://github.com/Haoke98/saer-openapi-sdk.git"
"Bug Tracker" = "https://github.com/Haoke98/saer-openapi-sdk/issues"
Changelog = "https://github.com/Haoke98/saer-openapi-sdk/blob/master/CHANGELOG.md"